# Cell

./: .gitignore  LICENSE  README.md  __cellcheck.ts  __cyclecheck.ts  index.html  package-lock.json  package.json  vite.config.ts
engine/: pyproject.toml
engine/cell_engine/: __init__.py  __main__.py
engine/cell_engine/cargo/: __init__.py  routing.py
engine/cell_engine/core/: __init__.py  cell_definition.py  engine.py  expression.py  genome.py  genomic_architecture.py  history.py  provenance.py  random.py  serialization.py  state.py
engine/tests/: test_amino_acid_catabolism.py  test_apoptosis.py  test_calcium.py  test_calibration.py  test_capability_atlas.py  test_cargo_routing.py  test_cell_cycle.py  test_cell_model.py  test_cellular_memory.py  test_cellular_memory_contract.py  test_cellular_response.py  test_central_dogma.py  test_cholestasis_panel.py  test_compartmental_energy_redox.py  test_completion_matrix.py  test_composition_guards.py  test_concentration_field_export.py  test_coupled_model.py  test_cytoplasm_inventory.py  test_cytosol_transport.py  test_detox.py  test_dna_repair.py  test_endocrine_context.py  test_energy_redox_gate.py  test_evidence_intake.py  test_expression.py  test_expression_coupled.py  test_external_review.py  test_fasting_response.py  test_fetch_human_gem.py  test_generative_boundary.py  test_genome.py  test_genomic_architecture.py  test_gluconeogenesis.py  test_glucose_calibration.py  test_glucose_homeostasis_contract.py  test_glucose_open_system.py  test_glycerol_gluconeogenesis.py  test_glycolysis.py  test_hepatic_flux_evidence.py  (+73 more)
(+413 files in other folders)
